add support for importing and exporting a group
This commit adds command support for importing and exporting a group.
It adds the following commands:

- `ipctl import group ...`
- `ipctl export group ...`

The current API does not natively support import and export so these
commands emulate the import and export using create and delete.

--- a/internal/handlers/descriptors/groups.yaml
+++ b/internal/handlers/descriptors/groups.yaml
@@ -38,3 +38,15 @@ clear:
   group: admin-essentials
   description: |
     Delete all local groups
+
+export:
+  use: group <name>
+  group: admin-essentials
+  description: |
+    Export a group
+
+import:
+  use: group <name>
+  group: admin-essentials
+  description: |
+    Import a group
