add gitter support to groups
This commit adds gitter support (push, pull) to the groups asset.  It
addes two new commands:

- `push group ...`
- `pull group ...`

--- a/internal/handlers/descriptors/groups.yaml
+++ b/internal/handlers/descriptors/groups.yaml
@@ -50,3 +50,16 @@ import:
   group: admin-essentials
   description: |
     Import a group
+
+push:
+  use: group <name> <repository>
+  group: admin-essentials
+  description: |
+    Push a group to a repository
+
+pull:
+  use: group <filename> <repository>
+  group: admin-essentials
+  description: |
+    Pull a group from a repository
+
