updates tags to support more commands
This commit updates the tags asset to support additional commands.  The
new commands supported for tags are:

- `create tag ...`
- `delete tag ...`
- `copy tag ...`
- `clear tag ...`

--- a/internal/handlers/descriptors/tags.yaml
+++ b/internal/handlers/descriptors/tags.yaml
@@ -1,4 +1,8 @@
 ---
+##############################################################################
+# Reader Commands
+##############################################################################
+
 get:
   use: tags
   group: admin-essentials
@@ -10,3 +14,36 @@ describe:
   group: admin-essentials
   description: |
     Display details about a tag
+
+##############################################################################
+# Writer Commands
+##############################################################################
+
+create:
+  use: tag <name>
+  group: admin-essentials
+  description: |
+    Create a new tag
+
+delete:
+  use: tag <name>
+  group: admin-essentials
+  description: |
+    Delete an existing tag
+
+clear:
+  use: tags
+  groups: admin-essentials
+  description: |
+    Delete all configured tags
+
+##############################################################################
+# Copeir Commands
+##############################################################################
+
+copy:
+  use: tag <name> --from <profile> --to <profile>
+  group: admin-essentials
+  description: |
+    Copy a tag from one server to another server
+
