update projects to support gitter interface
This commit updates projects to provide support for the gitter
interface.  This includes adding the following new commands:

- `push project ...`
- `pull project ...`

This commit makes a number of changes in the project service and runner
as well to implement more of the interface code

--- a/internal/handlers/descriptors/projects.yaml
+++ b/internal/handlers/descriptors/projects.yaml
@@ -132,7 +132,7 @@ clear:
     $ ipctl clear projects
 
 ##############################################################################
-# Promoter commands
+# Import/Export commands
 ##############################################################################
 
 import:
@@ -178,15 +178,13 @@ export:
 
 pull:
   use: project <repo>
-  gorup: automation-studio
-
+  group: automation-studio
   description: |
     Pull a project from a repository
 
 push:
   use: project <name> <repo>
   group: automation-studio
-
   description: |
     Push a project to a repository
 
