update the docs command reference
The commit updates the command reference to align with the current
command implementation.

--- a/internal/handlers/descriptors/tags.yaml
+++ b/internal/handlers/descriptors/tags.yaml
@@ -33,7 +33,7 @@ delete:
 
 clear:
   use: tags
-  groups: admin-essentials
+  group: admin-essentials
   description: |
     Delete all configured tags
 
