--- a/.github/workflows/premerge.yaml
+++ b/.github/workflows/premerge.yaml
@@ -15,11 +15,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: stable
+
       - name: Install go-licenses
         run: go install github.com/google/go-licenses@latest
+
+      - name: Run make test
+        run: make test
+
       - name: Run make licenses
         run: make licenses
