adds new dataset commands to the application
This commit adds two new top level commands to `ipctl` for dumping and
loading assets (collectively called datasets).  This commit adds the
following commands

- `dump profiles ...`
- `load profiles ...`

Once merged, all provides can be dumped from a server or loaded back
into a server.

--- a/internal/handlers/descriptors/profiles.yaml
+++ b/internal/handlers/descriptors/profiles.yaml
@@ -62,3 +62,15 @@ export:
   group: admin-essentials
   description: |
     Export a profile
+
+dump:
+  use: profiles
+  group: admin-essentials
+  description: |
+    Dump all profiles to path
+
+load:
+  use: profiles <path>
+  group: admin-essentials
+  description: |
+    Load all profiles from path
