rearrange command groups
This commit re-arranges the command groups to simply the command groups.
It removes the Import/Export command and Application command groups and
consolidates them into Asset and Platform respectively.

--- a/cmd/descriptors/asset.yaml
+++ b/cmd/descriptors/asset.yaml
@@ -38,3 +38,13 @@ clear:
     Delete all configured instances of a asset
   include_groups: true
   hidden: true
+
+import:
+  description: |
+    Import an asset
+  include_groups: true
+
+export:
+  description: |
+    Export an asset
+  include_groups: true
