adds application control (start, stop, restart) commands
This commit adds new commands for controlling platform applications.  It
adds the following commands:

- `start application ...`
- `stop application...`
- `restart application ...`

--- a/internal/handlers/descriptors/applications.yaml
+++ b/internal/handlers/descriptors/applications.yaml
@@ -7,3 +7,20 @@ inspect:
   use: applications
   description: |
     Show application status
+
+start:
+  use: application <name>
+  description: |
+    Start a stopped application
+
+stop:
+  use: application <name>
+  description: |
+    Stop a running application
+
+restart:
+  use: application <name>
+  description: |
+    Restart an application
+
+
