adds reader support for applications
This commit adds reader support for applications.  It adds two new
commands to the application.  The new commands are

- `get applications`
- `describe application ...`

--- a/internal/handlers/descriptors/applications.yaml
+++ b/internal/handlers/descriptors/applications.yaml
@@ -1,5 +1,21 @@
 ---
 #############################################################################
+# Asset commands
+#############################################################################
+get:
+  use: applications
+  group: admin-essentials
+  description: |
+    Display one or more applications
+
+describe:
+  use: application <name>
+  group: admin-essentials
+  description: |
+    Display detailed information about an application
+
+
+#############################################################################
 # Inspector commands
 #############################################################################
 
