fix release pipeline to include version and build
This commit fixes an issue with the release pipeline where the version
and build information was not be captured.  Once applied this fix will
address that problem such that the output from `ipctl version` will be
complete.

This fixes #48

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,8 +1,17 @@
 ---
+version: 2
+
 before:
   hooks:
     - make clean
     - go mod tidy
 
 snapshot:
-  version_template: "{{ .Env.BUILD }}"
+  version_template: "{{ .Version }}"
+
+builds:
+  - id: default
+    ldflags:
+      - -s -w
+      - -X github.com/itential/ipctl/internal/metadata.Build={{ .Env.BUILD }}
+      - -X github.com/itential/ipctl/internal/metadata.Version={{ .Tag }}
