--- a/internal/handlers/descriptors/integration_models.yaml
+++ b/internal/handlers/descriptors/integration_models.yaml
@@ -24,6 +24,13 @@ describe:
 # Writer Commands
 ##############################################################################
 
+create:
+  use: integration-model <path>
+  group: admin-essentials
+
+  description: |
+    Create a new integration model
+
 delete:
   use: integration-model <name>
   group: admin-essentials
