Add create / delete command support for device-groups
Adds support for device groups to the create and delete commands.  You
can now create a new device group or delete an existing device group.
This changes adds the following new commands to the application:

- `create device-group ...`
- `delete device-group ...`

--- a/internal/handlers/descriptors/devicegroups.yaml
+++ b/internal/handlers/descriptors/devicegroups.yaml
@@ -1,8 +1,4 @@
 ---
-##############################################################################
-# Reader commands
-##############################################################################
-#
 get:
   use: device-groups
   group: configuration-manager
@@ -14,3 +10,21 @@ describe:
   group: configuration-manager
   description: |
     Display details about a device group
+
+create:
+  use: device-group <name>
+  group: configuration-manager
+  description: |
+    Create new device-group
+
+delete:
+  use: device-group <name>
+  group: configuration-manager
+  description: |
+    Delete existing device-group
+
+clear:
+  use: device-groups
+  group: configuration-manager
+  description: |
+    Delete all device-groups
