--- a/cmd/descriptors/asset.yaml
+++ b/cmd/descriptors/asset.yaml
@@ -1,6 +1,6 @@
 # Copyright 2024 Itential Inc. All Rights Reserved
-# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
-# SPDX-License-Identifier: GPL-3.0-or-later
+# Unauthorized copying of this file, via any medium is strictly prohibited
+# Proprietary and confidential
 ---
 create:
   description:  |
