--- a/cmd/descriptors/localaaa.yaml
+++ b/cmd/descriptors/localaaa.yaml
@@ -1,7 +1,10 @@
 # Copyright 2024 Itential Inc. All Rights Reserved
-# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
-# SPDX-License-Identifier: GPL-3.0-or-later
+# Unauthorized copying of this file, via any medium is strictly prohibited
+# Proprietary and confidential
 ---
 local-aaa:
   description: |
     Manage local AAA
+
+    The local-aaa plugin provides commands for managing user and group
+    accounts defined in Local AAA.
