Clean up descriptor files
The descriptor files needed to be cleaned up with updated headers and
remove old command descriptors that no longer exist.  This change does
not add, remove or change any commands.

--- a/internal/handlers/descriptors/adapter_models.yaml
+++ b/internal/handlers/descriptors/adapter_models.yaml
@@ -1,8 +1,7 @@
----
-##############################################################################
-# Reader Commands
-##############################################################################
-
+# Copyright 2025 Itential Inc. All Rights Reserved
+# Unauthorized copying of this file, via any medium is strictly prohibited
+# Proprietary and confidential
+----
 get:
   use: adapter-models
   group: admin-essentials
