--- a/internal/handlers/descriptors/configuration_parsers.yaml
+++ b/internal/handlers/descriptors/configuration_parsers.yaml
@@ -1,8 +1,7 @@
----
-##############################################################################
-# Reader commands
-##############################################################################
-#
+# Copyright 2025 Itential Inc. All Rights Reserved
+# Unauthorized copying of this file, via any medium is strictly prohibited
+# Proprietary and confidential
+----
 get:
   use: configuration-parsers
   group: configuration-manager
