--- a/internal/handlers/descriptors/applications.yaml
+++ b/internal/handlers/descriptors/applications.yaml
@@ -1,3 +1,6 @@
+# Copyright 2025 Itential Inc. All Rights Reserved
+# Unauthorized copying of this file, via any medium is strictly prohibited
+# Proprietary and confidential
 ---
 get:
   use: applications
