--- a/internal/handlers/descriptors/devices.yaml
+++ b/internal/handlers/descriptors/devices.yaml
@@ -1,13 +1,12 @@
+# Copyright 2025 Itential Inc. All Rights Reserved
+# Unauthorized copying of this file, via any medium is strictly prohibited
+# Proprietary and confidential
 ---
-##############################################################################
-# Reader commands
-##############################################################################
-#
 get:
   use: devices
   group: configuration-manager
   description: |
-    Dispaly one or more devices
+    Display one or more devices
 
 describe:
   use: device <name>
