Clean up descriptors loading for root package
The descriptors implementation has been split between root commands
provided by cmd and subccommands provided by handlers.  This is the
beginning of an effort to clean those implementations up and combine
them into one.

--- a/cmd/descriptors/asset.yaml
+++ b/cmd/descriptors/asset.yaml
@@ -41,10 +41,10 @@ clear:
 
 import:
   description: |
-    Import an asset
+    Import an asset from a file or repository
   include_groups: true
 
 export:
   description: |
-    Export an asset
+    Export an asset to a file or repository
   include_groups: true
